--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "comp229-assignmen1",
+  "name": "comp229-assignmen2",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^5.2.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "jquery": "^3.7.0",
+    "mongoose": "^7.2.1",
+    "popper.js": "^1.16.1"
   }
 }
