--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
     "jquery": "^3.7.0",
     "mongoose": "^7.2.1",
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^8.0.0",
     "popper.js": "^1.16.1"
   }
 }
